# tauri-conduit

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/conduit/: Cargo.toml  README.md
crates/conduit-core/: Cargo.toml  LICENSE-APACHE  README.md
crates/conduit-core/benches/: codec_bench.rs  comparison_bench.rs  dispatch_bench.rs  handler_bench.rs  queue_bench.rs  ringbuf_bench.rs
crates/conduit-core/examples/: basic_usage.rs  derive_usage.rs
crates/conduit-core/src/: channel.rs  codec.rs  error.rs  handler.rs  lib.rs  queue.rs  ringbuf.rs  router.rs
crates/conduit-core/tests/: integration.rs
crates/conduit-derive/: Cargo.toml  README.md
crates/conduit-derive/src/: lib.rs
crates/conduit-derive/tests/: derive_tests.rs
crates/conduit-derive/tests/compile_fail/: command_borrowed_param.rs  command_borrowed_param.stderr  command_generic_fn.rs  command_generic_fn.stderr  command_impl_trait.rs  command_impl_trait.stderr  command_ref_pattern.rs  command_ref_pattern.stderr  command_self_param.rs  command_self_param.stderr  command_with_args.rs  command_with_args.stderr  derive_enum.rs  derive_enum.stderr  derive_generic_struct.rs  derive_generic_struct.stderr  derive_tuple_struct.rs  derive_tuple_struct.stderr  derive_unit_struct.rs  derive_unit_struct.stderr
crates/conduit-tauri/: Cargo.toml  README.md
crates/conduit-tauri/src/: lib.rs
crates/conduit/src/: lib.rs
crates/tauri-plugin-conduit/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-conduit/permissions/: default.toml
crates/tauri-plugin-conduit/permissions/autogenerated/: reference.md
crates/tauri-plugin-conduit/permissions/autogenerated/commands/: bootstrap.toml  conduit_bootstrap.toml  conduit_subscribe.toml
crates/tauri-plugin-conduit/permissions/schemas/: schema.json
crates/tauri-plugin-conduit/src/: lib.rs
examples/bench-app/: README.md
examples/bench-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/bench-app/src-tauri/capabilities/: default.json
examples/bench-app/src-tauri/src/: main.rs
scripts/: plot_benchmarks.py
