[package]
name = "conduit-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Binary IPC core: codec, dispatch table, ring buffer."
keywords = ["tauri", "ipc", "binary", "codec", "ringbuf"]
categories = ["encoding", "data-structures", "gui"]
repository = "https://github.com/userFRM/tauri-conduit"
homepage = "https://github.com/userFRM/tauri-conduit"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
conduit-derive = { version = "0.1.0", path = "../conduit-derive" }
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "codec_bench"
harness = false

[[bench]]
name = "ringbuf_bench"
harness = false

[[bench]]
name = "dispatch_bench"
harness = false

[[bench]]
name = "comparison_bench"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "derive_usage"
path = "examples/derive_usage.rs"
