[package]
name = "conduit-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Derive macros for conduit-core: WireEncode, WireDecode."
keywords = ["tauri", "ipc", "derive", "binary", "codec"]
categories = ["gui", "network-programming", "development-tools::procedural-macro-helpers"]
repository = "https://github.com/userFRM/tauri-conduit"
homepage = "https://github.com/userFRM/tauri-conduit"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
conduit-core = { version = "0.1.0", path = "../conduit-core" }
