[package]
name = "tauri-plugin-conduit"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "tauri-plugin-conduit — Tauri v2 plugin for binary IPC over the conduit:// custom protocol."
keywords = ["tauri", "ipc", "plugin", "binary"]
categories = ["gui", "web-programming"]
repository = "https://github.com/userFRM/tauri-conduit"
homepage = "https://github.com/userFRM/tauri-conduit"
readme = "README.md"

[dependencies]
conduit-core = { version = "1.0.0", path = "../conduit-core" }
conduit-derive = { version = "1.0.0", path = "../conduit-derive" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin = { version = "2", features = ["build"] }
serde = { version = "1", features = ["derive"] }
getrandom = "0.3"
subtle = "2"
url = "2"
http = "1"
