[package]
name = "bench-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-conduit = { path = "../../../crates/tauri-plugin-conduit" }
conduit = { path = "../../../crates/conduit" }
conduit-core = { path = "../../../crates/conduit-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs = "0.3"

[build-dependencies]
tauri-build = "2"
